<resources>
    <string name="app_name">androidProject</string>
    <string name="image">image</string>
    <string name="login">로그인</string>
    <string name="singIn">새 계정 만들기</string>
    <string name="signUp">회원가입</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="upload">upload</string>
    <string name="shorts">shorts</string>
    <string name="account">account</string>
    <string name="share">공유</string>
    <string name="tagperson">사람 태그</string>
    <string name="newpost">새 게시물</string>
    <string name="selecphoto">사진 선택</string>
    <string name="postDescription">문구를 작성하세요...</string>
    <string name="imagebutton">imageButton</string>
    <string name="like">좋아요 %d개</string>
    <string name="content_description">content description....</string>
    <string name="timePassed">%s</string>
    <string name="comment">댓글</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>