<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".UploadActivity">
    <ImageView
        android:id="@+id/addphoto_image"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        tools:src="@drawable/ic_launcher_background"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image"/>
    <Button
        android:id="@+id/select_btn"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/selecphoto"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/bg_et"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:gravity="top"
            android:id="@+id/description_et"
            android:hint="@string/postDescription"
            android:inputType="text"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/tag_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:scaleType="fitXY"
            android:src="@drawable/tag"
            app:tint="@color/white"
            android:contentDescription="@string/image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagperson"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="240dp"
            android:src="@drawable/arrow_right"
            android:scaleType="fitXY"
            app:tint="@color/white"
            android:contentDescription="@string/image"/>
    </LinearLayout>
    <Button
        android:id="@+id/upload_btn"
        android:text="@string/share"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/share_btn_bg"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

</LinearLayout>