<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:id="@+id/login_root"
    android:gravity="center"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/logo"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/image"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo">
        <EditText
            android:id="@+id/id_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_et"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:padding="10dp"
            android:autofillHints="id"
            android:hint="    사용자 이름, 이메일 주소 또는 휴대폰 번호"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:inputType="text"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_tf">
        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/bg_et"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:hint="  비밀번호"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:autofillHints="id"
            android:inputType="textPassword"
            tools:ignore="LabelFor" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/password_tf"
        android:background="@drawable/login_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/login_btn"
        android:background="@drawable/signin_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/singIn"
        android:textStyle="bold"
        android:textColor="@color/singIn"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signIn_btn"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:textStyle="bold"
        android:text="INSTAGRAM"
        android:textSize="20sp"
        android:textColor="@color/white"
        />

</RelativeLayout>