<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/black">
        <ImageView
            android:id="@+id/profile_iv"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_launcher_background"
            android:background="@drawable/profile_bg"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"/>
        <TextView
            android:id="@+id/userName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/profile_iv"
            tools:text="kkkkkk"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <ImageButton
            android:id="@+id/menu_ib"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/arrow_right"
            app:tint="@color/white"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagebutton" />

        <ImageView
            android:id="@+id/post_iv"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/image"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/indicator"
            app:layout_constraintTop_toBottomOf="@id/profile_iv"
            tools:layout_editor_absoluteX="9dp"
            tools:src="@mipmap/ic_launcher" />
        <ImageButton
            android:id="@+id/like_ib"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/heart_outlined"
            app:tint="@color/white"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_iv"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/imagebutton" />
        <ImageButton
            android:id="@+id/comment_ib"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/comment"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/like_ib"
            app:layout_constraintTop_toBottomOf="@id/post_iv"
            app:tint="@color/white"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagebutton"/>
        <ImageButton
            android:id="@+id/dm_ib"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/direct_message"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/comment_ib"
            app:layout_constraintTop_toBottomOf="@id/post_iv"
            app:tint="@color/white"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagebutton"/>
        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/dm_ib"
            app:layout_constraintTop_toBottomOf="@id/post_iv"
            android:layout_marginStart="70dp"/>
        <ImageButton
            android:id="@+id/bookmark_ib"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/bookmark"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/post_iv"
            app:tint="@color/white"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:contentDescription="@string/imagebutton"/>
        <TextView
            android:id="@+id/likes_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/like_ib"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/like"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/small_userName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/likes_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:text="kkkk"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/contentDescription_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/likes_tv"
            app:layout_constraintStart_toEndOf="@id/small_userName_tv"
            android:layout_marginStart="3dp"
            android:text="@string/content_description"
            android:textSize="15sp"
            android:textColor="@color/white"/>
        <ImageView
            android:id="@+id/my_profile_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="@+id/contentDescription_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            tools:src="@drawable/ic_launcher_background"
            android:background="@drawable/profile_bg"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image"/>
        <TextView
            android:id="@+id/new_comment_tv"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/my_profile_iv"
            app:layout_constraintTop_toBottomOf="@+id/contentDescription_tv"
            android:text="댓글 달기..."
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/timepassed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/new_comment_tv"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/timePassed"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:textSize="11sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>